<resources>
    <string name="app_name">IMEI Generator</string>
    <string name="generate_custom_imei">GENERATE CUSTOM IMEI</string>
    <string name="albanian">Albanian</string>
    <string name="amharic">Amharic</string>
    <string name="arabic">Arabic</string>
    <string name="azerbaijani">Azerbaijani</string>
    <string name="belarusian">Belarusian</string>
    <string name="bengali">Bengali</string>
    <string name="bosnian">Bosnian</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="burmese">Burmese</string>
    <string name="chinese">Chinese</string>
    <string name="croatian">Croatian</string>
    <string name="czech">Czech</string>
    <string name="danish">Danish</string>
    <string name="dutch">Dutch</string>
    <string name="english">English</string>
    <string name="estonian">Estonian</string>
    <string name="filipino">Filipino</string>
    <string name="finnish">Finnish</string>
    <string name="french">French</string>
    <string name="georgian">Georgian</string>
    <string name="german">German</string>
    <string name="greek">Greek</string>
    <string name="hebrew">Hebrew</string>
    <string name="hindi">Hindi</string>
    <string name="hungarian">Hungarian</string>
    <string name="icelandic">Icelandic</string>
    <string name="indonesian">Indonesian</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="kazakh">Kazakh</string>
    <string name="korean">Korean</string>
    <string name="lithuanian">Lithuanian</string>
    <string name="luxembourgish">Luxembourgish</string>
    <string name="macedonian">Macedonian</string>
    <string name="malagasy">Malagasy</string>
    <string name="malay">Malay</string>
    <string name="mongolian">Mongolian</string>
    <string name="norwegian">Norwegian</string>
    <string name="polish">Polish</string>
    <string name="portuguese">Portuguese</string>
    <string name="romanian">Romanian</string>
    <string name="russian">Russian</string>
    <string name="slovak">Slovak</string>
    <string name="slovenian">Slovenian</string>
    <string name="spanish">Spanish</string>
    <string name="swedish">Swedish</string>
    <string name="thai">Thai</string>
    <string name="turkish">Turkish</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="urdu">Urdu</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="select_language">Select Language</string>
    <string name="dismiss">Dismiss</string>
    <string name="rate_tut">Support the developer</string>
    <string name="rate_tuts">Kindly give a good rating to support developer of this app</string>
    <string name="if_you_enjoy_using">If you enjoy using</string>
    <string name="please_take_a_moment_to_rate_the_app">, please take a moment to rate the app.</string>
    <string name="thanks_for_your_support">Thanks for your support</string>
    <string name="change_tuts">Change Language</string>
    <string name="changes_tut">Select any language of your choice by clicking this icon</string>
    <string name="learn_tut">Learn How To Use</string>
    <string name="learn_tuts">Click this item when in each page or tab for instructions on how to use the functions</string>
    <string name="manymore_tut">Many More Options</string>
    <string name="manymore_tuto">Click this icon to get many more options like MTK Engineering and Fetch My IMEI</string>
    <string name="not_now">Not now</string>
    <string name="no">No</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="later">Later</string>
    <string name="tell_us_where_to_improve">Tell us how to improve</string>
    <string name="submit">Submit</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="support">Support</string>
    <string name="encourage_the_developer">Encourage \n The Developer</string>
    <string name="so_much_work_was_done_to_provide_you_with_this_app">So much work was done to provide you with this app</string>
    <string name="kindly_rate_the_app_to_support_the_developer_your_feedback_is_important">Kindly rate the app to support the developer.\n Your feedback is important.</string>
    <string name="analyze_any_imei">Analyze any IMEI</string>
    <string name="analyze_any_imei_tut">Type the IMEI you want to analyze and click this button. We will tell you if the IMEI is correct or not correct</string>
    <string name="spec_imeis">Generate IMEI for Specific Devices</string>
    <string name="spec_imei_tuts">Generate IMEI for specific phones by selecting the phone from the list</string>
    <string name="back">Back</string>
    <string name="model">Model</string>
    <string name="select_a_phone">Select A Phone</string>
    <string name="imei_selected">IMEI Selected: \n</string>
    <string name="clear">Delete</string>
    <string name="generatecust_tut">Generate custom IMEI by typing your desired digits and click this button</string>
    <string name="copy_all">Copy All</string>
    <string name="type_digits_here">Type digits here</string>
    <string name="custom_imei">Custom IMEI</string>
    <string name="phone_imei">Phone IMEI</string>
    <string name="device_imei">Device IMEI</string>
    <string name="analyzer">Analyzer</string>
    <string name="phone_specs">Phone Specs</string>
    <string name="rate_app">Rate App</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="tools">Tools</string>
    <string-array name="language">
        <item>@string/english</item>
        <item>@string/french</item>
        <item>@string/italian</item>
        <item>@string/russian</item>
        <item>@string/spanish</item>
        <item>@string/turkish</item>
    </string-array>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="more_apps_on_playstore">More Apps On Playstore</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="generate">generate</string>
    <string name="analyze">analyze</string>
    <string name="specs">Specs</string>
    <string name="specs_value">Specs Value</string>
    <string name="Input_14_or_15_digits">Input 14 or 15 digits</string>
    <string name="imei_is_correct">IMEI is correct</string>
    <string name="imei_is_not_correct">IMEI is not correct</string>
    <string name="imei_is_not_complete">IMEI is not complete</string>
    <string name="my_imei">My IMEI</string>
    <string name="imei_1">IMEI 1:</string>
    <string name="imei_2">IMEI 2:</string>
    <string name="copy">copy</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="sign_in_instead"><u>Sign in instead</u></string>
    <string name="learn_more"><u>Learn more</u></string>
    <string name="create_account"><u>Create account</u></string>
    <string name="forgot_email"><u>Forgot email?</u></string>
    <string name="return_to_sign_in"><u>Return to sign in</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="logo">Logo</string>
    <string name="create_your_account">Create your Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="learn_more_about_droid_appliance_and_the_benefits_of_becoming_a_member">Learn more about droid appliance and the benefits of becoming a member.</string>
    <string name="next">Next</string>
    <string name="use_your_email_address">Use your Email Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="acount_recovery">Acount recovery</string>
    <string name="a_link_has_been_sent_to_your_email_follow_the_link_to_recover_your_account">A link has been sent to your email. Follow the link to recover your account</string>
</resources>