<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/encourage_the_developer"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/so_much_work_was_done_to_provide_you_with_this_app"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/blackColor"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kindly_rate_the_app_to_support_the_developer_your_feedback_is_important"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/blackColor"
        android:textStyle="normal" />

    <Button
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:padding="10dp"
        android:text="@string/rate_app"
        android:textColor="@android:color/white"
        android:textSize="12sp" />


</LinearLayout>
