<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="3">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="2"
                    android:textColorHint="@android:color/darker_gray"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/type_digits_here"
                        android:inputType="number"
                        android:maxLength="15"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColorHint="@android:color/darker_gray" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/analyze"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:padding="10dp"
                    android:text="@string/analyze"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/demacator"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/adLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/anadView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:adSize="MEDIUM_RECTANGLE"
                    app:adUnitId="ca-app-pub-1488497497647050/8718433521" />

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/correct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/imei_is_correct"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/not_correct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/imei_is_not_correct"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/not_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/imei_is_not_complete"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/analyzer_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="3dp"
                android:visibility="gone" />


            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/clear"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>

