<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:paddingBottom="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="4dp">

            <TextView
                android:id="@+id/imei1_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imei_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/imei1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imei1_tag"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/copy1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/copy"
                android:src="@drawable/ic_content_copy_red_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/white"
            android:padding="4dp">

            <TextView
                android:id="@+id/imei2_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imei_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/imei2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imei2_tag"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/copy2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/copy"
                android:src="@drawable/ic_content_copy_red_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</LinearLayout>
